bug with "double click" on up arrow in filebrowser #35261

Closed
opened 2013-05-08 18:27:47 +02:00 by Kevin T · 3 comments

%%%--- Operating System, Graphics card ---
vista-32bit

- version with error ---

2.65 to 2.67

- version that worked ---

2.64

- Short description of error ---

Rapid mouse clicking on the "up arrow" icon, to go back in the file path will result in grabbing the icon. instead of going back.

But only when: 1. Pressing an even number of times(2,4,6 etc)
2. Pressing ON the icon(pressing anywhere else in the field will make it go back in the file path, without icon interfering.)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Go to file->open and make you way to ex "C:\xxx\xxx\xxx"
  2. Now press the up arrow (the one shown in attached image) two times,fast.

What should have happened: directory should be "C:\xxx" (?)

What happens: The icon will be "grabbed" and the directory will be "C:\xxx\xxx"

%%%

%%%--- Operating System, Graphics card --- vista-32bit - version with error --- 2.65 to 2.67 - version that worked --- 2.64 - Short description of error --- Rapid mouse clicking on the "up arrow" icon, to go back in the file path will result in grabbing the icon. instead of going back. But only when: 1. Pressing an even number of times(2,4,6 etc) 2. Pressing ON the icon(pressing anywhere else in the field will make it go back in the file path, without icon interfering.) - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Go to file->open and make you way to ex "C:\xxx\xxx\xxx" 2. Now press the up arrow (the one shown in attached image) two times,fast. What should have happened: directory should be "C:\xxx\" (?) What happens: The icon will be "grabbed" and the directory will be "C:\xxx\xxx" %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35261
No description provided.