Fix #35261: double clicking the up arrow in the file browser to go up multiple directories fast would start drag and drop. Disabled drag on those items now.